# LeanEVM

./: LeanEVM.lean  README.md  lake-manifest.json  lakefile.lean
LeanEVM/: LeanEVM.lean  README.md  Translator.lean  lake-manifest.json  lakefile.lean
LeanEVM/Contracts/: AMM.lean  ERC20.lean  ERC721.lean
LeanEVM/Core/: Execution.lean
LeanEVM/Lab/: Automation.lean  ERC1155.lean  ERC20.lean  Lending.lean  Vault.lean
LeanEVM/Lab/Automation/: AesopRules.lean  Tactics.lean  Testable.lean
LeanEVM/Lab/ERC1155/Contracts/: Interface.lean  MultiToken.lean
LeanEVM/Lab/ERC1155/Model/: TransitionSystem.lean
LeanEVM/Lab/ERC1155/Properties/: Invariants.lean
LeanEVM/Lab/ERC20/Contracts/: BasicToken.lean  Interface.lean  MintableToken.lean
LeanEVM/LeanEVM/Contracts/: AMM.lean  ERC20.lean  ERC721.lean
LeanEVM/LeanEVM/Core/: Analysis.lean  FFI.lean  OpcodeTable.lean  Runtime.lean  StackOps.lean  StorageLayout.lean  Types.lean
LeanEVM/LeanEVM/Model/: TransitionSystem.lean
LeanEVM/LeanEVM/Opcodes/: Arithmetic.lean  Comparison.lean  ContextOps.lean  ControlFlow.lean
LeanEVM/LeanEVM/Properties/: SafetyProperties.lean
LeanEVM/LeanEVM/Testing/: JsonRunner.lean  Parser.lean
LeanEVM/Properties/: SafetyProperties.lean
LeanEVM/Translator/CLI/: Main.lean
LeanEVM/Translator/Generator/: OpGen.lean  StateGen.lean  TransitionGen.lean
LeanEVM/Translator/Parser/: AST.lean  Lexer.lean  Parser.lean
LeanEVM/Translator/Test/: SimpleToken.sol  Test.lean
LeanEVM/docs/: EVMStorageNotes.md  VeilNotes.md
LeanEVM/native/: Cargo.toml  README.md
LeanEVM/native/src/: lib.rs
(+18 files in other folders)
